fix css overflow

--- a/RazorTodo.Web/wwwroot/css/bbljCalendar.css
+++ b/RazorTodo.Web/wwwroot/css/bbljCalendar.css
@@ -2,6 +2,7 @@
     height: 100vh;
     height: 100svh;
     margin: 0px;
+    overflow: auto;
 }
 .page-title {
     width: calc(100% - 22px);
